fix image jump

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,10 @@ sup {
     animation-play-state: paused;
 }
 
+.container-images:hover {
+    animation-play-state: paused;
+}
+
 .images-preview{
     width: 100%;
     height: auto;
